fix(accordion): Remove white space nowrap on title collapse (#75)

--- a/src/styles/components/_go-collapse.scss
+++ b/src/styles/components/_go-collapse.scss
@@ -10,9 +10,6 @@
     flex: 1;
     min-width: 0;
     h5 {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
       line-height: normal;
       margin: 0;
     }
